--- a/app/views/talks/show.html.erb
+++ b/app/views/talks/show.html.erb
@@ -1,34 +1,36 @@
-<div class='talk effect2 list<%= @talk.series.id %>' itemprop="event" itemscope itemtype="http://schema.org/Event">
-  <%= render :partial => 'button_toolbar' %>
-  <%= logo(@talk, :medium) %>
-  <%= render :partial => 'sidebar' %>
-  <h1 class='summary'><%= talk_title(@talk) %></h1>
-  <ul class='details'>
-    <li>	<%= talk_speaker(@talk)  %></li>
-    <li><%= format_time_of_talk @talk, true %></li>
-    <li><%= talk_venue @talk %></li>
-  </ul>
-  <p class='urgent' id='special-msg' rel='talks-hidden-btn'>
-    <%= render :partial => 'talks/special_messages/show' %>
-  </p>
-  <%= talk_abstract @talk %>
-		
-		<p>This talk is part of the <%= link_list @talk.series %> series.</p>		
-		
-<div class="related">
-		<h2>This talk is included in these lists:</h2>
-		<ul>
-		<% for list in @talk.lists.uniq.sort_by { |list| list.name } %>
-			<% next if list.ex_directory? %>
-			<li><%= link_list list %></li>
-		<% end %>
-		</ul>
-		<% if @talk.lists.empty? %>
-			<p>This talk is not included in any other list</p>
-		<% end %>
-		<% unless User.current && User.current.administrator? %>
-		<p>Note that ex-directory lists are not shown.</p>
-		<% end %>
-</div>
+<div class="effect2">
+  <div class='talk list<%= @talk.series.id %>' itemprop="event" itemscope itemtype="http://schema.org/Event">
+    <%= render :partial => 'button_toolbar' %>
+    <%= logo(@talk, :medium) %>
+    <%= render :partial => 'sidebar' %>
+    <h1 class='summary'><%= talk_title(@talk) %></h1>
+    <ul class='details'>
+      <li>	<%= talk_speaker(@talk)  %></li>
+      <li><%= format_time_of_talk @talk, true %></li>
+      <li><%= talk_venue @talk %></li>
+    </ul>
+    <p class='urgent' id='special-msg' rel='talks-hidden-btn'>
+      <%= render :partial => 'talks/special_messages/show' %>
+    </p>
+    <%= talk_abstract @talk %>
+    
+    <p>This talk is part of the <%= link_list @talk.series %> series.</p>		
+    
+    <div class="related">
+      <h2>This talk is included in these lists:</h2>
+      <ul>
+	<% for list in @talk.lists.uniq.sort_by { |list| list.name } %>
+	<% next if list.ex_directory? %>
+	<li><%= link_list list %></li>
+	<% end %>
+      </ul>
+      <% if @talk.lists.empty? %>
+      <p>This talk is not included in any other list</p>
+      <% end %>
+      <% unless User.current && User.current.administrator? %>
+      <p>Note that ex-directory lists are not shown.</p>
+      <% end %>
+    </div>
+  </div>
 </div>
 <%= render :partial => 'additional_scripts' %>
