--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
   <li class="active"><a href="#" id="day">Today</a></li>
   <li><a href="#" id="week">This week</a></li>
   <% if User.current %>
-  <li><a href="#" id="stared">Stared</a></li>
+  <li><a href="#" id="starred">Starred</a></li>
   <% end %>
   <li><a href="#" id="all">All</a></li>
 </ul>
