Fixed issue with rss, ics, and calendar.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
   <% if User.current %>
   <li><a href="#" id="starred">Starred</a></li>
   <% end %>
-  <li><a href="#" id="all">All</a></li>
+  <li><a href="#" id="upcoming">All</a></li>
 </ul>
 <div id="tab-target">
 </div>
