Do not call ex_directory privacy.

--- a/app/views/talks/edit.html.erb
+++ b/app/views/talks/edit.html.erb
@@ -39,7 +39,7 @@
 	<h3>Picture of speaker or other image associated with this talk (optional)</h3>
 	<%= f.file_field :image %>
 
-	<h3>Privacy</h3>
+	<h3>Exclude from listing</h3>
 	<p class='emailcheck'><%= f.check_box :ex_directory %> If checked,
 this talk will not appear in the index or search results, but will still be
 found by Google and similar sites.
