--- a/app/assets/stylesheets/talks.css
+++ b/app/assets/stylesheets/talks.css
@@ -157,6 +157,7 @@ td .delete-logo {
 .talk .toolbar ul {
     list-style: none;
     margin: 0; padding: 0;
+    font-size: 12px;
 }
 
 @media (min-width: 480px) {
