display: inline-block instead of float:left;

--- a/app/assets/stylesheets/talks.css
+++ b/app/assets/stylesheets/talks.css
@@ -172,7 +172,7 @@ td .delete-logo {
     overflow: auto;
 }
 .talk .topbar li {
-    float: left;
+    display: inline-block;
     padding: 5px;
 }
 .talk .sidebar li {
