--- a/app/views/show/_email_detail.text.erb
+++ b/app/views/show/_email_detail.text.erb
@@ -3,7 +3,7 @@
 ---------------------------
 <% talks.sort_by { |talk| talk.start_time }.each do |talk| %>
 <%= talk.series.name %><% if talk.special_message && !talk.special_message.empty? %><%= " [#{talk.special_message}]" %><% end %>
-<%= t(:date_and_time).html_safe %>: <%= l(talk.start_time, :format => :long) %>-<%= talk.start_time.strftime('%H:%M') %>
+<%= t(:date_and_time).html_safe %>: <%= l(talk.start_time, :format => :long) %>-<%= talk.end_time.strftime('%H:%M') %>
 <%= t :venue %>: <%= talk.venue && talk.venue.name %>
 <%= t :speaker %>: <%= talk.name_of_speaker %>
 <%= t :title %>: <%= talk.title.html_safe %>
