Use bootstrap's class='alert' instead of class='message'

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
 <h1>Update your details</h1>
 
 <% if @show_message %>
-<p id='ask_for_more_information' class='message'>
+<p id='ask_for_more_information' class='alert'>
 Before you continue on to use <%=SITE_NAME %>, we would be grateful if you could fill out these details:
 </p>
 <% end %>
