--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,7 +10,8 @@
 <%= stylesheet_link_tag lists_styles_path(:action => 'lists', :update => @styles_last_update) %>
 <%= auto_discovery_link %>
 <meta http-equiv="content-type" content="text-html; charset=utf-8"/>
-<meta name="Keywords" content='talks, seminars, <%= HOST_INSTITUTE %>'/>
+<meta name="Keywords" content="<%= KEYWORDS %>, <%= HOST_INSTITUTE %>"/>
+<meta name="Description" content="<%= DESCRIPTION %>"/> 
 <%= meta_twitter_card %>
 <%= meta_opengraph %>
 </head>
