--- a/app/views/shared/_breadcrumbs.html.erb
+++ b/app/views/shared/_breadcrumbs.html.erb
@@ -1,5 +1,5 @@
 <!-- breadcrumbs -->
-<div class="row">
+<div class="row-fluid">
 <ul class="breadcrumb">
   <li><%= link_to SITE_NAME, home_url %></li>
   <%= mybreadcrumbs %>
