--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
 <!-- footer -->
 <footer class="footer">
-  <div class="container">
+  <div class="container-fluid">
 <p class="cfooter">&copy; 2006-2009 <a href="http://talks.cam.ac.uk/">Talks.cam</a>, University of Cambridge. &copy; 2012- <a href="https://github.com/ryotat/talks.tokyo">Talks.Tokyo</a></p>
 <ul class="footer-links">
   <li><%= link_to 'Contact Us', document_path('Contact') %></li>
