--- a/app/views/shared/_navigationbar.html.erb
+++ b/app/views/shared/_navigationbar.html.erb
@@ -1,7 +1,7 @@
 <!-- header -->
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
-    <div class="container">
+    <div class="container-fluid">
       <ul class="nav">
 	<li>
 	  <%= link_to SITE_NAME, home_path, :class => "brand" %>
