--- a/app/assets/stylesheets/talks.css
+++ b/app/assets/stylesheets/talks.css
@@ -1,3 +1,7 @@
+.container-fluid {
+    padding-right: 40px;
+    padding-left: 40px;
+}
 #week .day a[rel='tooltip']:hover {
     text-decoration: none;
 }
