--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,12 @@
 <%= render 'shared/header' %>
 <body>
   <%= render 'shared/navigationbar' %>
-  <div class="container">
+  <div class="container-fluid">
     <%= render 'shared/breadcrumbs' %>
     <div id="flash">
       <%= show_flash %>
     </div>
-   <div class="row">
+   <div class="row-fluid">
       <div class="span12"><%= yield %></div>
     </div>
   </div>
