--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -2,17 +2,15 @@
 <html lang="en">
 <%= render 'shared/header' %>
 <body>
-  <%= render 'shared/navigationbar' %>
-  <div class="container">
+  <div class="container-fluid">
     <%= render 'shared/breadcrumbs' %>
-    <div class="row">
-      <div class="span7 offset2">
+    <div class="row-fluid">
+      <div class="span12">
 	<div id='minimal_content'>
 	<%= yield %>
 	</div>
       </div>
     </div>
-    <%= render 'shared/footer'%>
   </div>
 </body>
 </html>
