--- a/app/views/layouts/with_related.html.erb
+++ b/app/views/layouts/with_related.html.erb
@@ -3,12 +3,12 @@
 <%= render 'shared/header' %>
 <body>
   <%= render 'shared/navigationbar' %>
-  <div class="container">
+  <div class="container-fluid">
     <%= render 'shared/breadcrumbs' %>
     <div id="flash">
       <%= show_flash %>
     </div>
-    <div class="row">
+    <div class="row-fluid">
       <div class="span8"><a name="startcontent" id="startcontent"></a><%= yield %></div>
       <div class="span4 sidebox"><%= render :partial => 'shared/sidebox' %></div>
     </div>
