--- a/app/views/talks/edit.html.erb
+++ b/app/views/talks/edit.html.erb
@@ -63,7 +63,7 @@ Please copy &amp; paste the seminar announcement text (e.g., from an email) into
 <textarea id="inputbox" cols="63" rows="20">
 # This is an example
 Title: A great talk
-Speaker: John Hoge (University of Kansas)
+Speaker: John Hoge (University of Nowhere)
 Venue: Room 1234
 Time: 2013年4月1日 10:00 - 12:00
 Abstract:
