--- a/app/views/layouts/with_related.html.erb
+++ b/app/views/layouts/with_related.html.erb
@@ -9,7 +9,7 @@
       <%= show_flash %>
     </div>
     <div class="row-fluid">
-      <div class="span8"><a name="startcontent" id="startcontent"></a><%= yield %></div>
+      <div class="span8 main"><%= yield %></div>
       <div class="span4 sidebox"><%= render :partial => 'shared/sidebox' %></div>
     </div>
   </div>
