--- a/app/views/show/_add_talk_box.html.erb
+++ b/app/views/show/_add_talk_box.html.erb
@@ -1,3 +1,3 @@
-<div class='vevent simpletalk click effect2'>
+<div class='simpletalk'>
   <%= link_to 'Add a new talk', (list ? talk_path(:action => 'new', :list_id => @list) : choose_lists_path), :class => "btn btn-large btn-block" %>
 </div>
