Implemented auto link organiser and series in special messages.

--- a/app/views/talks/special_messages/_show.html.erb
+++ b/app/views/talks/special_messages/_show.html.erb
@@ -1,4 +1,4 @@
 <% if @talk.special_message %>
-<%= @talk.special_message %>
+<%= linked_special_message(SPECIAL_MESSAGE_KEYWORDS) %>
 <% end %>
 <%= edit_special_message_button %>
